@@ -1,7 +1,8 @@
 useDynLib(nftbart, .registration=TRUE)
 S3method(predict, nft)
+S3method(predict, nft2)
 S3method(predict, aftree)
-export(nft)
+export(nft, nft2)
 export(CDimpute)
 importFrom(Rcpp, evalCpp)
 ##importFrom("graphics", "abline", "boxplot", "lines", "par", "plot", "points")
