@@ -9,8 +9,12 @@
 
 /* .Call calls */
 extern SEXP cpsambrt_predict(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
-extern SEXP cprnft(SEXP, SEXP, SEXP);
+extern SEXP cprnft(SEXP, SEXP, SEXP, SEXP);
+extern SEXP cpsambrt_predict2(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
+extern SEXP cprnft2(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 extern SEXP cnft(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
+extern SEXP cnft2(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
+//extern SEXP cpsambrt(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 //extern SEXP cpsambrt(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 //extern SEXP cpsambrt_vartivity(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 //extern SEXP cpsambrt_save(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
@@ -24,8 +28,11 @@ extern SEXP cnft(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEX
 
 static const R_CallMethodDef CallEntries[] = {
     {"cpsambrt_predict", (DL_FUNC) &cpsambrt_predict,  7},
-    {"cprnft",           (DL_FUNC) &cprnft,            3},
+    {"cprnft",           (DL_FUNC) &cprnft,            4},
+    {"cpsambrt_predict2",(DL_FUNC) &cpsambrt_predict2, 9},
+    {"cprnft2",          (DL_FUNC) &cprnft2,           6},
     {"cnft",             (DL_FUNC) &cnft,             32},
+    {"cnft2",            (DL_FUNC) &cnft2,            34},
 //    {"cpsambrt",         (DL_FUNC) &cpsambrt,         32},
 //   {"cpsambrt_vartivity",(DL_FUNC) &cpsambrt_vartivity,6},
 //    {"cpsambrt_save",    (DL_FUNC) &cpsambrt_save,     7},
